<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="com.example.coupons.common.entities.CouponEntity"/>
        <variable
            name="viewModel"
            type="com.example.coupons.mainModule.viewModel.MainViewModel" />
        <variable
            name="isActive"
            type="boolean" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".mainModule.view.MainActivity"
        android:paddingHorizontal="@dimen/common_padding_xlarge"
        android:paddingVertical="@dimen/common_padding">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.5"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_consult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_button_consult"
            android:onClick="@{()->viewModel.consultCouponBycode()}"
            app:layout_constraintStart_toEndOf="@id/btn_create"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/guideline"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_create"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_button_create"
            android:onClick="@{()->viewModel.saveCoupon()}"
            app:isGone="@{isActive}"
            tools:visibility="visible"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/btn_consult"
            app:layout_constraintBottom_toTopOf="@id/guideline"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"/>
        <TextView
            android:id="@+id/tvtittle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome_text"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
            android:textAlignment="center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilCoupon"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/common_padding"
            android:hint="@string/main_hint_coupon"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/btn_consult"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etcoupon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@={viewModel.coupon.code}"
                android:contentDescription="@string/main_hint_coupon"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilDescription"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:endIconMode="clear_text"

            android:hint="@{isActive ? @string/main_hint_active : @string/main_hint_description}"
            android:enabled="@{!isActive}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/tilCoupon"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etdescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/main_hint_description"
                android:text="@={viewModel.coupon.description}"
                tools:text="Cupon valido por 10% en compras mayores a 10 USD"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"/>

        </com.google.android.material.textfield.TextInputLayout>



    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>